web-infras/parser/tests/fixtures/self-added/let-as-identifier/module/let-as-arrow-expr-param/output.txt
[SyntaxError]: unexpect keyword in strict mode (1,12)
1|const a = (let) => {
 |          ^
[SyntaxError]: unexpect keyword in strict mode (1,12)
1|const a = (let) => {
 |          ^
[SyntaxError]: unexpect keyword in strict mode (1,12)
1|const a = (let) => {
 |          ^
